--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,16 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{siam2021deep,
+  title={Deep Learning Based Air-Writing Recognition with the Choice of Proper Interpolation Technique},
+  author={Siam, MD AL},
+  journal={Sensors},
+  volume={21},
+  number={24},
+  pages={8407},
+  year={2021}
+}
+
 @book{einstein1920relativity,
   title={Relativity: the Special and General Theory},
   author={Einstein, Albert},
